--- a/app/scss/transfer.scss
+++ b/app/scss/transfer.scss
@@ -10,17 +10,16 @@
         &-breadcrumbs {
             display: flex;
             align-items: center;
-            gap: 8px;
+            gap: 6px;
 
             a,
             p,
             span {
                 color: var(--color-primary-textsub);
             }
-
             a {
                 transition: all 0.5s ease;
-
+                font-weight: 600;
                 &:hover {
                     color: var(--color-actient);
                 }
@@ -290,6 +289,7 @@
                             max-width: none;
                             padding: 24px;
                             border-radius: 500px;
+                            margin-top: 8px;
                             .button-wrap {
                                 justify-content: center;
                             }
